<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="pref_edit_custom_herd"
        android:title="@string/pref_edit_custom_herd_title"
        android:summary="@string/pref_edit_custom_herd_summary"
        app:fragment="uk.cpjsmith.ponypaper.CustomPoniesPreferencesFragment" />

    <PreferenceCategory
        android:key="pref_library_actions"
        android:title="@string/pref_library_actions_category">
        <Preference
            android:key="pref_add_custom"
            android:title="@string/pref_add_custom_title"
            android:summary="@string/pref_add_custom_summary" />
        <Preference
            android:key="pref_remove_custom"
            android:title="@string/pref_remove_custom_title"
            android:summary="@string/pref_remove_custom_summary" />
        <Preference
            android:key="pref_export_library"
            android:title="@string/pref_export_library_title"
            android:summary="@string/pref_export_library_summary" />
        <Preference
            android:key="pref_import_library"
            android:title="@string/pref_import_library_title"
            android:summary="@string/pref_import_library_summary" />
        <Preference
            android:key="pref_library_folder"
            android:title="@string/pref_library_folder_title"
            android:summary="@string/pref_library_folder_summary_unset" />
    </PreferenceCategory>

</PreferenceScreen>
