<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="pref_herd_summary"
        android:title="@string/pref_herd_summary_title"
        android:summary="@string/pref_herd_summary_live_placeholder"
        android:selectable="false"
        android:persistent="false" />

    <ListPreference
        android:key="pref_waifu"
        android:title="Waifu/Husbando"
        android:summary="%s"
        android:dialogTitle="best pony"
        android:entries="@array/pref_waifu_entries"
        android:entryValues="@array/pref_waifu_values"
        android:defaultValue="" />

    <Preference
        android:key="pref_save_mix"
        android:title="@string/pref_save_mix_title"
        android:summary="@string/pref_save_mix_summary" />
    <Preference
        android:key="pref_load_mix"
        android:title="@string/pref_load_mix_title"
        android:summary="@string/pref_load_mix_summary" />

    <Preference
        android:key="pref_screen_builtin"
        android:title="@string/pref_screen_builtin_title"
        android:summary="@string/pref_screen_builtin_summary_placeholder"
        app:fragment="uk.cpjsmith.ponypaper.BuiltInPoniesPreferencesFragment" />

    <Preference
        android:key="pref_screen_custom"
        android:title="@string/pref_screen_custom_title"
        android:summary="@string/pref_screen_custom_summary_empty"
        app:fragment="uk.cpjsmith.ponypaper.CustomPoniesPreferencesFragment" />

</PreferenceScreen>
