<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <View
            android:id="@+id/color_preview"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/pref_color_swatch" />

        <TextView
            android:id="@+id/color_hex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:id="@+id/color_swatches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="12dp">

            <View
                android:id="@+id/color_swatch_0"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true" />

            <View
                android:id="@+id/color_swatch_1"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true" />

            <View
                android:id="@+id/color_swatch_2"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true" />

            <View
                android:id="@+id/color_swatch_3"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true" />

            <View
                android:id="@+id/color_swatch_4"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true" />

            <View
                android:id="@+id/color_swatch_5"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/color_red"
                android:text="@string/pref_background_colour_red" />
            <SeekBar
                android:id="@+id/color_red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="255" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/color_green"
                android:text="@string/pref_background_colour_green" />
            <SeekBar
                android:id="@+id/color_green"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="255" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/color_blue"
                android:text="@string/pref_background_colour_blue" />
            <SeekBar
                android:id="@+id/color_blue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="255" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
